@@ -1,6 +1,7 @@
 v4.0.1 2019-10-07
 - can use grl = TRUE in plot.MixtComp
-- bug correctin in extractCIPoissonVble when grl = TRUE
+- add plotData parameter in plot.MixtComp
+- bug correction in extractCIPoissonVble when grl = TRUE
 - plotDataBoxplot using ggplot2 and plotly
 
 v4.0.0 2019-08-27
